<resources>
    <string name="app_name">OOPsProject</string>
    <string name="name">Name</string>
    <string name="log_in">LOG IN</string>
    <string name="password">Password</string>
    <string name="new_user">New User ?</string>
    <string name="regLink">Sign Up !</string>
    <string name="lock_icon">TODO</string>
    <string name="user_icon">TODO</string>
    <string name="isRegistered">Not Registered ?</string>
    <string name="signUp">    Sign Up !</string>

    <string name="action_settings">Settings</string>
    <string name="login_back">TODO</string>
    <string name="login_detail_back">TODO</string>
    <string name="logo">logo</string>
    <string name="login_back_card">login_back_card</string>
    <string name="not_registered">Not Registered ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email ID</string>
    <string name="mobile_no">Mobile No</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="knowCPR">Check this box If You Know how to give CPR.</string>
    <string name="T_and_C">I Agree To the Terms and Conditions.</string>
    <string name="signupback">signUpBack</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="profile_pic">profile_pic</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
<<<<<<< HEAD
=======
    <string name="make_a_request">Make a Request</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="bloog_group">Bloog Group</string>
    <string name="quantity">Quantity</string>
>>>>>>> 9b6b2d10a8c2062e963e487705c73f27ca46a0f5
</resources>
