<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/post_bg"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/LinearLayout1">

            <TextView

                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginRight="10dp"
                android:text="Blood Group:"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/postBlood"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/bloog_group"
                android:textColor="#fff" />
        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/LinearLayout1"
             android:id="@+id/LinearLayout2"
             android:orientation="horizontal">
             <TextView

                 android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:text="Quantity: "
                 android:layout_marginRight="10dp"
                 android:textColor="#fff" />
             <TextView
                 android:id="@+id/postquantity"
                 android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:gravity="start"
                 android:hint="@string/quantity"
                 android:textColor="#fff" />
         </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/LinearLayout2"
            android:id="@+id/LinearLayout3"
            >
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/location_icon"/>
            <TextView
                android:id="@+id/postLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/location"
                android:textColor="#fff" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_below= "@id/LinearLayout3"
            android:id="@+id/LinearLayout4"
            >
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/contact_icon"/>
            <TextView
                android:id="@+id/postContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/contact"
                android:textColor="#fff" />


        </LinearLayout>


</RelativeLayout>